--- a/src/app/components/chart-test-component/chart-test-component.html
+++ b/src/app/components/chart-test-component/chart-test-component.html
@@ -28,5 +28,9 @@
         <mat-checkbox [(ngModel)]="showBoxes" (change)="ensureOverlaysLoaded()">
             Boxes
         </mat-checkbox>
+
+        <mat-checkbox [(ngModel)]="showBoxesV2" (change)="ensureOverlaysLoadedV2()">
+            Boxes V2
+        </mat-checkbox>
     </div>
 </div>
