--- a/src/app/components/footer-compenent/footer-compenent.html
+++ b/src/app/components/footer-compenent/footer-compenent.html
@@ -1,4 +1,9 @@
 <footer class="app-footer">
+    <button mat-button (click)="navigate('chartSimple')">
+        <mat-icon>shopping_cart</mat-icon>
+        <span>TEST</span>
+    </button>
+
     <button mat-button (click)="navigate('orders')">
         <mat-icon>shopping_cart</mat-icon>
         <span>Orders</span>
@@ -18,7 +23,7 @@
         <mat-icon>bar_chart</mat-icon>
         <span>Chart</span>
     </button>
-<!-- 
+    <!-- 
     <button mat-stroked-button color="primary" (click)="checkForUpdates()">
         <mat-icon>update</mat-icon>
         <span>Update</span>
