--- a/src/app/components/chart-simple-component/chart-simple-component.scss
+++ b/src/app/components/chart-simple-component/chart-simple-component.scss
@@ -1,8 +1,8 @@
 .chart-container {
   width: 100%;
   height: 600px;
-  background-color: #0d1117; // dark mode bg
+  background-color: #0d1117;
   border-radius: 8px;
   padding: 0.5rem;
-  cursor: crosshair; // like TradingView
+  cursor: crosshair;
 }
