--- a/src/app/components/chart-test-component/chart-test-component.html
+++ b/src/app/components/chart-test-component/chart-test-component.html
@@ -1,4 +1,4 @@
-<!-- <div class="chart-wrapper">
+<div class="chart-wrapper">
     <div class="chart-container">
         <canvas baseChart [data]="chartData" [options]="chartOptions" [type]="'candlestick'">
         </canvas>
@@ -28,5 +28,18 @@
         <mat-checkbox [(ngModel)]="showBoxesV2" (change)="ensureOverlaysLoadedV2()">
             Boxes V2
         </mat-checkbox>
+
+        <mat-checkbox [(ngModel)]="showIndicators" (change)="toggleIndicators()">
+            Indicators
+        </mat-checkbox>
     </div>
-</div> -->
+
+    <div class="indicator-list" *ngIf="showIndicators">
+        <h4>Indicators (occurrences)</h4>
+        <ul>
+            <li *ngFor="let it of indicatorEvents">
+                {{ it.EndTime }} - {{ it.Kind }} - {{ it.Indicators.join(', ') || '-' }}
+            </li>
+        </ul>
+    </div>
+</div>
