--- a/src/app/components/footer-compenent/footer-compenent.html
+++ b/src/app/components/footer-compenent/footer-compenent.html
@@ -1,7 +1,7 @@
 <footer class="app-footer">
   <button mat-button (click)="navigate('chartSimple')">
     <mat-icon>shopping_cart</mat-icon>
-    <span>TEST</span>
+    <span>Grafiek</span>
   </button>
 
   <button mat-button (click)="navigate('orders')">
@@ -13,7 +13,7 @@
     <mat-icon>visibility</mat-icon>
     <span>Watchlist</span>
   </button>
-  <!-- 
+  <!--
     <button mat-button (click)="showNotification()">
         <mat-icon>notifications</mat-icon>
         <span>Notify</span>
@@ -28,7 +28,7 @@
     <mat-icon>bar_chart</mat-icon>
     <span>Chart</span>
   </button> -->
-  <!-- 
+  <!--
     <button mat-stroked-button color="primary" (click)="checkForUpdates()">
         <mat-icon>update</mat-icon>
         <span>Update</span>
