--- a/src/app/components/bitcoin-candle-chart-component/bitcoin-candle-chart-component.html
+++ b/src/app/components/bitcoin-candle-chart-component/bitcoin-candle-chart-component.html
@@ -1,4 +1,4 @@
-<div class="controls" style="display:flex;gap:16px;align-items:center;margin-bottom:12px;flex-wrap:wrap;">
+<!--<div class="controls" style="display:flex;gap:16px;align-items:center;margin-bottom:12px;flex-wrap:wrap;">
   <mat-form-field appearance="outline">
     <mat-label>Symbol</mat-label>
     <mat-select [value]="selectedSymbol" (selectionChange)="onSymbolChange($event.value)">
@@ -14,12 +14,12 @@
     <mat-checkbox [checked]="showFib" (change)="toggleFib($event.checked)">Fibonacci</mat-checkbox>
     <mat-checkbox [checked]="showVolumeProfile" (change)="toggleVolumeProfile($event.checked)">Volume
       profile</mat-checkbox>
-    <mat-checkbox [checked]="showEmaMma" (change)="toggleEmaMma($event.checked)">EMA/MMA</mat-checkbox>
+    <mat-checkbox [checked]="showEmaMma" (change)="toggleEmaMma($event.checked)">EMA/MMA</mat-checkbox>-->
     <!-- <mat-checkbox [checked]="showVwap" (change)="toggleVwap($event.checked)">VWAP/RVWAP</mat-checkbox> -->
-    <mat-checkbox [checked]="showBoxes" (change)="toggleBoxes($event.checked)">Boxes</mat-checkbox>
+    <!--<mat-checkbox [checked]="showBoxes" (change)="toggleBoxes($event.checked)">Boxes</mat-checkbox>-->
     <!-- <mat-checkbox [checked]="showZeros" (change)="toggleShowZeros($event.checked)">Show zero values</mat-checkbox> -->
     <!-- <button mat-stroked-button (click)="resetZoom()" style="margin-left:8px;">Reset Zoom</button> -->
-  </div>
+  <!--</div>
 </div>
 
 <div class="chart-wrapper">
@@ -27,4 +27,4 @@
     <canvas class="bg" baseChart [data]="chartData" [options]="chartOptions" [type]="'candlestick'">
     </canvas>
   </div>
-</div>
+</div>-->
